--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   --pale-grey: #f5f6fa;
   --azure: #0290ff;
   --pinkish-grey: #c4c4c4;
+  --medium-blue: #307bbe;
+  --dodger-blue: #379cf6;
 }
 
 #root {
@@ -9,6 +11,10 @@
   height: 89.625rem;
   padding: 9.313rem 3.75rem 7.688rem 6.25rem;
   background-color: var(--pale-grey);
+}
+
+.span-block {
+  display: block;
 }
 
 .container {
@@ -79,6 +85,21 @@
   margin: 0;
   padding: 0.875rem;
   border: solid 1px var(--white);
+}
+
+.Oval-2 {
+  width: 60px;
+  height: 60px;
+  border: 10px solid #f3f3f3;
+  border-radius: 50%;
+  border-right: 10px solid #2274ee;
+  border-bottom: 10px solid #2274ee;
+}
+
+.Rectangle-3 {
+  width: 5.625rem;
+  height: 5.62rem;
+  padding: 0.62rem 0.625rem 0.75rem 0.75rem;
 }
 
 .Mask {
@@ -176,10 +197,6 @@
   border: solid 1px #e8e8e8;
 }
 
-.empty {
-  margin: auto;
-}
-
 .book-form {
   display: flex;
   flex-direction: column;
@@ -266,7 +283,6 @@
   background-color: white;
 }
 
-.fl-table td,
 .fl-table th {
   text-align: center;
   padding: 8px;
@@ -277,6 +293,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 0px;
 }
 
 .fl-table thead th {
