--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,71 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
 :root {
+  --bubble-gum-pink: #ff5ab7;
+  --black: #1e1e1e;
   --pale-grey: #f5f6fa;
+  --black-three: #121212;
   --azure: #0290ff;
-  --pinkish-grey: #c4c4c4;
   --medium-blue: #307bbe;
   --dodger-blue: #379cf6;
+  --white: #fafafa;
 }
 
-#root {
-  width: 100rem;
-  height: 89.625rem;
-  padding: 9.313rem 3.75rem 7.688rem 6.25rem;
-  background-color: var(--pale-grey);
+/* Fonts */
+
+@font-face {
+  font-family: Montserrat;
+  src:
+    local(montserrat-regular),
+    url(./fonts/monserrat_woff/Montserrat-Regular.woff2) format("woff2"),
+    url(./fonts/monserrat_woff/Montserrat-Regular.woff) format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
 }
 
-.span-block {
-  display: block;
+@font-face {
+  font-family: Montserrat;
+  src:
+    local(montserrat-bold),
+    url(./fonts/monserrat_woff/Montserrat-Bold.woff2) format("woff2"),
+    url(./fonts/monserrat_woff/Montserrat-Bold.woff) format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
 }
 
-.container {
-  width: 87.5rem;
-  height: 68.563rem;
-  margin: 0 2.5rem 4.063rem 0;
-  padding: 0 0 49.625rem;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap");
+
+.panel {
+  margin: 0 auto;
+  position: relative;
+  width: 1400px;
+  height: 1097px;
   border-radius: 4px;
-  box-shadow: 0 0 60px 0 var(--black-5);
-  background-color: #fafafa;
-}
-
-.nav {
-  height: 5.938rem;
-  margin: 0 0 2.375rem;
-  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
+  background-color: var(--white);
 }
 
 .Bookstore-CMS {
-  width: 20rem;
-  height: 2.313rem;
-  margin: 0.375rem 2.938rem 0.125rem 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 1.875rem;
+  margin-left: 100px;
+  width: 1600px;
+  height: 1434px;
+  background-color: var(--pale-grey);
+}
+
+.title-header {
+  margin-left: 100px;
+  width: 240px;
+  height: 37px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
@@ -50,114 +74,137 @@
   color: var(--azure);
 }
 
-.BOOKS {
-  width: 3.688rem;
-  height: 1rem;
-  margin: 1.125rem 2.563rem 0.688rem 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 0.813rem;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: 1.9px;
-  color: #121212;
-}
-
-.CATEGORIES {
-  width: 6.563rem;
-  height: 1rem;
-  margin: 1.125rem 30.5rem 0.688rem 2.563rem;
-  opacity: 0.5;
-  font-family: Montserrat, sans-serif;
-  font-size: 0.813rem;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: 1.9px;
-  color: #121212;
-}
-
-.Oval {
-  width: 2.813rem;
-  height: 2.813rem;
-  margin: 0;
-  padding: 0.875rem;
-  border: solid 1px var(--white);
-}
-
-.Oval-2 {
-  width: 60px;
-  height: 60px;
-  border: 10px solid #f3f3f3;
-  border-radius: 50%;
-  border-right: 10px solid #2274ee;
-  border-bottom: 10px solid #2274ee;
-}
-
-.Rectangle-3 {
-  width: 5.625rem;
-  height: 5.62rem;
-  padding: 0.62rem 0.625rem 0.75rem 0.75rem;
-}
-
-.Mask {
-  width: 1.063rem;
-  height: 1.063rem;
-  background-color: var(--azure);
-}
-
-#book-row {
+.panel-bg {
+  position: relative;
+  top: 0;
+  left: 50%;
+  margin-bottom: 40px;
+  transform: translateX(-50%);
   display: flex;
-  justify-content: space-between;
-  height: 10.625rem;
-  margin: 2.313rem 6.25rem 0;
-  padding: 2rem 9.188rem 1.625rem 1.688rem;
+  flex-direction: row;
+  align-items: center;
+  width: 1400px;
+  height: 97px;
   border-radius: 4px;
-  border: solid 1px var(--white);
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.05);
   background-color: #fff;
 }
 
-#info {
-  text-align: left;
+.books {
+  width: 59px;
+  height: 16px;
+  margin-left: 50px;
+  margin-right: 50px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.9px;
+  color: var(--black-three);
+  text-transform: uppercase;
 }
 
-.book-category {
-  width: 3.063rem;
-  height: 1.125rem;
-  margin: 0 2.438rem 0 0;
+.categories {
+  position: absolute;
+  top: 3.7%;
+  left: 36%;
+  border: none;
+  width: 105px;
+  height: 16px;
   opacity: 0.5;
-  font-family: Montserrat, sans-serif;
-  font-size: 0.875rem;
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.9px;
+  color: var(--black-three);
+  background: #fff;
+}
+
+.login {
+  margin-left: 55%;
+  background-image: url("./icons/login_icon.png");
+  background-repeat: no-repeat;
+  width: 45px;
+  height: 45px;
+  background-size: cover;
+}
+
+.list-item {
+  display: flex;
+  position: relative;
+  list-style: none;
+  margin: 1em auto;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.Lesson-Panel {
+  width: 1200px;
+  height: 170px;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+}
+
+.Current-Chapter {
+  width: 126px;
+  height: 18px;
+  opacity: 0.5;
+  font-family: "Roboto Slab", serif;
+  font-size: 13px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--black-three);
+  text-transform: uppercase;
+}
+
+.School-of {
+  width: 49px;
+  height: 18px;
+  opacity: 0.5;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
-  color: #121212;
+  color: var(--black-three);
 }
 
-.book-title {
-  width: 12.313rem;
-  height: 1.813rem;
-  margin: 0.188rem 20.188rem 0 0;
-  font-family: RobotoSlab, sans-serif;
-  font-size: 1.375rem;
+.title {
+  height: 29px;
+  font-family: "Roboto Slab", serif;
+  font-size: 22px;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: -0.2px;
-  color: #121212;
+  color: var(--black-three);
 }
 
-.book-id {
-  width: 6.688rem;
-  height: 1.188rem;
-  margin: 0.25rem 0 0;
-  font-family: RobotoSlab, sans-serif;
-  font-size: 0.875rem;
+.book-actions {
+  width: 30%;
+  height: 66%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.Suzanne-Collins {
+  width: 107px;
+  height: 19px;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
@@ -166,235 +213,193 @@
   color: #4386bf;
 }
 
-.book-options {
-  width: 4.563rem;
-  height: 1.188rem;
-  margin: 0.188rem 0.938rem 0.125rem 0;
-  font-family: RobotoSlab, sans-serif;
-  font-size: 0.875rem;
+.book-option {
+  position: relative;
+  height: 19px;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: normal;
   color: #4386bf;
+  text-decoration: none;
   background-color: transparent;
   border: 0;
 }
 
-.Line {
-  width: auto;
-  height: 0;
-  margin: 10px 70px 70px;
-  border: solid 1px #e8e8e8;
-  align-self: center;
+.middle-option {
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-left: solid 1px #e8e8e8;
+  border-right: solid 1px #e8e8e8;
 }
 
-.Line-2 {
-  width: 0;
-  height: 4.375rem;
-  margin: auto;
-  border: solid 1px #e8e8e8;
-}
-
-.book-form {
-  display: flex;
-  flex-direction: column;
-  max-width: 100%;
-  margin: 10px 70px 70px;
-  box-shadow: 0 35px 50px rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  color: #fff;
-  background: transparent;
-}
-
-.book-form-header {
-  height: 1.5rem;
-  margin: 1.813rem 32.75rem 1.188rem 0;
-  font-family: Montserrat, sans-serif;
-  font-size: 1.25rem;
-  font-weight: bold;
+.-Percent-Complete {
+  width: 68px;
+  height: 39px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 32px;
+  font-weight: normal;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
-  letter-spacing: -0.18px;
-  color: #888;
+  letter-spacing: normal;
+  color: var(--black-three);
 }
 
-#title-input {
-  width: 41.5rem;
-  height: 2.813rem;
-  margin: 1.188rem 2.125rem 0 0;
-  border-radius: 4px;
-  border: solid 1px var(--white);
-  background-color: #fff;
+.Completed {
+  width: 80px;
+  height: 18px;
+  opacity: 0.5;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--black-three);
 }
 
-#category-input {
-  width: 17.813rem;
-  height: 2.813rem;
-  margin: 1.188rem 2.125rem 0;
-  border-radius: 4px;
-  border: solid 1px var(--white);
-  background-color: #fff;
+.Current-Lesson {
+  width: 75px;
+  height: 21px;
+  font-family: "Roboto Slab", serif;
+  font-size: 16px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.4px;
+  color: var(--black-three);
+  margin: 8px 0;
 }
 
-.add-book-button {
-  width: 11.5rem;
-  height: 2.813rem;
-  margin: 1.188rem 0 0 2.125rem;
-  border-radius: 6px;
+.Rectangle-2 {
+  width: 184px;
+  height: 33px;
+  border-radius: 3px;
   background-color: var(--azure);
+  border: none;
 }
 
-.add-book-button-span {
-  font-family: RobotoSlab, sans-serif;
-  font-size: 0.65rem;
-  font-weight: bold;
+/* buttons */
+.base-button {
+  font-family: "Roboto Slab", serif;
+  font-size: 13px;
+  font-weight: 300;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
   letter-spacing: 0.5px;
   text-align: center;
   color: #fff;
+  text-transform: uppercase;
+  margin: auto;
 }
 
-.form-fields {
+.Update-progress {
+  position: relative;
+  width: 143px;
+  height: 18px;
+}
+
+.submit-btn {
+  width: 184px;
+  position: relative;
+  height: 45px;
+  font-weight: bold;
+}
+
+.progress-numbers {
+  height: 72%;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
 }
 
-/* Table Styles */
-
-.table-wrapper {
-  margin: 10px 70px 70px;
-  box-shadow: 0 35px 50px rgba(0, 0, 0, 0.2);
-}
-
-.fl-table {
-  border-radius: 5px;
-  font-size: 12px;
-  font-weight: normal;
-  border: none;
-  border-collapse: collapse;
-  width: 100%;
-  max-width: 100%;
-  white-space: nowrap;
-  background-color: white;
-}
-
-.fl-table th {
-  text-align: center;
-  padding: 8px;
-}
-
-.fl-table td {
-  font-size: 12px;
+.Rectangle-3 {
+  width: 90px;
+  height: 89.9px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.completion-meter {
+  display: flex;
+  align-items: center;
+}
+
+.Oval-2 {
+  position: relative;
+  width: 68px;
+  height: 68px;
+  background-image: url("./icons/percentage.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.Line-2 {
+  width: 2px;
+  height: 70px;
+  border: solid 1px #e8e8e8;
+}
+
+/*  Form title */
+
+.form-block {
+  margin: 25px auto;
+  width: 1200px;
+  border-top: solid 1px #e8e8e8;
+}
+
+.form-title {
+  height: 24px;
+  margin: 24px 0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.18px;
+  color: #888;
+  text-transform: uppercase;
+}
+
+.inputValue {
+  width: 664px;
+  height: 45px;
+  margin-right: 34px;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+  font-size: 16px;
+  padding-left: 15px;
+}
+
+.inputValue::placeholder {
+  color: #c4c4c4;
+}
+
+.category {
+  width: 285px;
+  height: 45px;
+  margin-right: 34px;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+  font-size: 16px;
+  padding-left: 15px;
+  color: #c4c4c4;
+}
+
+form {
+  display: flex;
   justify-content: space-between;
-  padding: 0px;
-}
-
-.fl-table thead th {
-  color: #fff;
-  background: #4fc3a1;
-}
-
-.fl-table thead th:nth-child(odd) {
-  color: #fff;
-  background: #324960;
-}
-
-.fl-table tr:nth-child(even) {
-  background: #f8f8f8;
-}
-
-.filter-category {
-  margin: 10px 70px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-/* Responsive */
-
-@media (max-width: 767px) {
-  .fl-table,
-  .bookForm {
-    display: block;
-    width: 100%;
-  }
-
-  .table-wrapper::before {
-    content: "Scroll horizontally >";
-    display: block;
-    text-align: right;
-    font-size: 11px;
-    color: white;
-    padding: 0 0 10px;
-  }
-
-  .fl-table thead {
-    float: left;
-  }
-
-  .fl-table tbody {
-    width: auto;
-    position: relative;
-    overflow-x: auto;
-  }
-
-  .fl-table td,
-  .fl-table th {
-    padding: 20px 0.625em 0.625em 0.625em;
-    height: 60px;
-    vertical-align: middle;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 120px;
-    font-size: 13px;
-    text-overflow: ellipsis;
-  }
-
-  .fl-table thead,
-  .fl-table tbody,
-  .fl-table thead th {
-    display: block;
-  }
-
-  .fl-table thead th {
-    text-align: left;
-    border-bottom: 1px solid #f7f7f9;
-  }
-
-  .fl-table thead th:last-child {
-    border-bottom: none;
-  }
-
-  .fl-table tbody tr {
-    display: table-cell;
-  }
-
-  .fl-table tbody td {
-    display: block;
-    text-align: center;
-  }
-
-  .fl-table tr:nth-child(even) {
-    background: transparent;
-  }
-
-  .fl-table tbody tr:nth-child(odd) {
-    background: none;
-  }
-
-  .fl-table tr td:nth-child(odd) {
-    background: #f8f8f8;
-    border-right: 1px solid #e6e4e4;
-  }
-
-  .fl-table tr td:nth-child(even) {
-    border-right: 1px solid #e6e4e4;
-  }
 }
