--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap");
 
-.font-normal, .font-bold {
+.font-normal,
+.font-bold {
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
